--- a/about/about.html
+++ b/about/about.html
@@ -20,8 +20,9 @@
     </header>
         
     <intro>
-        I am a student and graphic artist at the University of San Francisco currently studying design and computer science. I specialize in graphic and web design, front-end development, and illustration.<br><br><br>
-        
+        <div class="aboutintro">
+        <a href="../index.html">I am a student and graphic artist at the University of San Francisco currently studying design and computer science. I specialize in graphic and web design, front-end development, and illustration.</a><br><br><br>
+        </div>
         Experience:<br>
         Imprint Projects — San Francisco<br>
         Design Intern<br><br>
