--- a/about/about.html
+++ b/about/about.html
@@ -17,12 +17,12 @@
     
     <div class= "grid-container">
     <header>
-        <a href="../index.html"><img class="logo" src="../img/logo.png" alt="Natalie Morris"></a>
+        <a href="../"><img class="logo" src="../img/logo.png" alt="Natalie Morris"></a>
     </header>
         
     <intro>
         <div class="aboutintro">
-        <a href="../index.html">I am a student and graphic artist at the University of San Francisco currently studying design and computer science. I specialize in graphic and web design, front-end development, and illustration.</a><br><br><br>
+        <a href="../">I am a student and graphic artist at the University of San Francisco currently studying design and computer science. I specialize in graphic and web design, front-end development, and illustration.</a><br><br><br>
         </div>
         Experience:<br>
         Imprint Projects — San Francisco<br>
