--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <link rel="icon" 
       type="image/png" 
-      href="img/logo-01.png">
+      href="img/favicon.png">
  </head>
     
 <body>
