--- a/index.html
+++ b/index.html
@@ -27,34 +27,41 @@
         
         <div class= "desc">
             1. <br>
+            <a href="drop/dropbox.html">Dropbox</a>
+        </div>
+        <div class= "one">
+            <a href="drop/dropbox.html"><img src="img/portfolio/drop/dropbox6.jpg"></a>
+        </div>
+        <div class= "desc">
+            2. <br>
             <a href="memphis/memphis.html">Memphis</a>
         </div>
         <div class= "one">
             <a href="memphis/memphis.html"><img src="img/portfolio/memphis/memphis.jpg"></a>
         </div>
         <div class= "desc">
-            2. <br>
+            3. <br>
             <a href="mixnmingle/mixnmingle.html">Mix n Mingle</a>
         </div>
         <div class= "one">
             <a href="mixnmingle/mixnmingle.html"><img src="img/portfolio/mixnmingle/mixnmingle.png"></a>
         </div>
         <div class= "desc">
-            3. <br>
+            4. <br>
             <a href="joyluck/joyluck.html">The Joy Luck Club</a>
         </div>
         <div class= "one">
             <a href="joyluck/joyluck.html"><img src="img/portfolio/joyluck/joyluck-02.jpg"></a>
         </div>
         <div class= "desc">
-            4. <br>
+            5. <br>
             <a href="contact/contact.html">Contact</a>
         </div>
         <div class= "one">
             <a href="contact/contact.html"><img src="img/portfolio/contact/contact-04.jpg"></a>
         </div>
         <div class= "desc">
-            5. <br>
+            6. <br>
             <a href="youth/youth.html">Queer Youth</a>
         </div>
         <div class= "one">
