--- a/about/about.html
+++ b/about/about.html
@@ -37,9 +37,11 @@
             </div>
             
             <c>Experience:</c><br>
-            Imprint Projects — San Francisco<br>
+            Imprint Projects — San Francisco (2019)<br>
+            Imprint Projects — Los Angeles (2020)
+            <br>
             Design Intern<br><br>
-            The Graphics Center — San Francisco<br>
+            The Graphics Center — San Francisco (2017-2020)<br>
             Senior Graphic Designer<br><br>
 
             <c>Education:</c><br>
