--- a/about/about.html
+++ b/about/about.html
@@ -32,8 +32,7 @@
                 <c>Contact:</c><br>
                 <a href="mailto:natmariemorris@gmail.com">Email</a><br>
                 <a href="https://www.instagram.com/natalie.marie.morris/">Instagram</a><br>
-                <a href="https://www.linkedin.com/in/nataliemariemorris/">LinkedIn</a><br>
-                <a href="https://www.behance.net/nataliemariemorris">Behance</a><br><br>
+                <a href="https://www.linkedin.com/in/nataliemariemorris/">LinkedIn</a><br><br>
             </div>
             
             <c>Experience:</c><br>
@@ -67,7 +66,6 @@
         <a href="mailto:natmariemorris@gmail.com">Email</a><br>
         <a href="https://www.instagram.com/natalie.marie.morris/">Instagram</a><br>
         <a href="https://www.linkedin.com/in/nataliemariemorris/">LinkedIn</a><br>
-        <a href="https://www.behance.net/nataliemariemorris">Behance</a>
     </nav>
     
     <div class="credit">
