--- a/ip/ip.html
+++ b/ip/ip.html
@@ -31,6 +31,9 @@
         <img class="ip_2" src="../img/portfolio/ip/ip2.jpg">
         <img class="ip_3" src="../img/portfolio/ip/ip3.jpg">
         <img class="ip_4" src="../img/portfolio/ip/ip4.jpg">
+        <img class="ip_6" src="../img/portfolio/ip/ip6.jpg">
+        <img class="ip_7" src="../img/portfolio/ip/ip7.jpg">
+        <img class="ip_5" src="../img/portfolio/ip/ip5.jpg">
     </container>
     
     <div id="mail">
