--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
         </div>
         <div class= "desc">
             5. <br>
-            <a href="youth/youth.html">Queer Youth</a>
+            <a href="guised/guised.html">Guise and Self</a>
         </div>
         <div class= "one">
-            <a href="youth/youth.html"><img src="img/portfolio/youth/youth-10.jpg"></a>
+            <a href="guised/guised.html"><img src="img/portfolio/guised/guised.jpg"></a>
         </div>
         <div class= "desc">
             6. <br>
