--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
         </div>
         <div class= "desc">
             4. <br>
-            <a href="mixnmingle/mixnmingle.html">Mix n Mingle</a>
+            <a href="clothing/clothing.html">Clothing Drive</a>
         </div>
         <div class= "one">
-            <a href="mixnmingle/mixnmingle.html"><img src="img/portfolio/mixnmingle/mixnmingle.png"></a>
+            <a href="clothing/clothing.html"><img src="img/portfolio/clothing/clothing.jpg"></a>
         </div>
         <div class= "desc">
             5. <br>
@@ -59,13 +59,6 @@
         </div>
         <div class= "one">
             <a href="guised/guised.html"><img src="img/portfolio/guised/guised.jpg"></a>
-        </div>
-        <div class= "desc">
-            6. <br>
-            <a href="contact/contact.html">Contact</a>
-        </div>
-        <div class= "one">
-            <a href="contact/contact.html"><img src="img/portfolio/contact/contact-04.jpg"></a>
         </div>
     </div>
     
