--- a/clothing/clothing.html
+++ b/clothing/clothing.html
@@ -22,12 +22,13 @@
     <div class= "art-grid-container">
         <div class= "about">
             <p>Clothing Drive — 2020</p>
-            Illustration for UNCF clothing drive fundraiser.<br><br>
+            Illustration series for UNCF clothing drive fundraiser.<br><br>
         </div>   
     </div>
     
     <container>
-        <img class="clothing_1" src="../img/portfolio/clothing/clothing1.jpg">
+        <img class="clothing_1" src="../img/portfolio/clothing/clothing2.png">
+        <img class="clothing_2" src="../img/portfolio/clothing/clothing3.png">
     </container>
     
     <div id="mail">
