--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <a href="clothing/clothing.html">Clothing Drive</a>
         </div>
         <div class= "one">
-            <a href="clothing/clothing.html"><img src="img/portfolio/clothing/clothing.jpg"></a>
+            <a href="clothing/clothing.html"><img src="img/portfolio/clothing/clothing1.png"></a>
         </div>
         <div class= "desc">
             5. <br>
