--- a/about/about.html
+++ b/about/about.html
@@ -31,7 +31,7 @@
             <div id="hiddennav">
                 <c>Contact:</c><br>
                 <a href="mailto:natmariemorris@gmail.com">Email</a><br>
-                <a href="https://www.instagram.com/natalie.marie.morris/">Instagram</a><br>
+                <a href="https://www.instagram.com/n_______mm">Instagram</a><br>
                 <a href="https://www.linkedin.com/in/nataliemariemorris/">LinkedIn</a><br><br>
             </div>
             
@@ -64,7 +64,7 @@
 
     <nav>
         <a href="mailto:natmariemorris@gmail.com">Email</a><br>
-        <a href="https://www.instagram.com/natalie.marie.morris/">Instagram</a><br>
+        <a href="https://www.instagram.com/n_______mm">Instagram</a><br>
         <a href="https://www.linkedin.com/in/nataliemariemorris/">LinkedIn</a><br>
     </nav>
     
