--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         
         <div class= "desc">
             1. <br>
-            <a href="drop/dropbox.html">Rx</a>
+            <a href="drop/post.html">Postcards</a>
         </div>
         <div class= "one">
-            <a href="rx/rx.html"><img src="img/portfolio/rx/rxplay1.png"></a>
+            <a href="post/post.html"><img src="img/portfolio/post/post.jpg"></a>
         </div>
         <div class= "desc">
             2. <br>
@@ -59,6 +59,13 @@
         </div>
         <div class= "one">
             <a href="guised/guised.html"><img src="img/portfolio/guised/guised.jpg"></a>
+        </div>
+        <div class= "desc">
+            6. <br>
+            <a href="rx/rx.html">Rx</a>
+        </div>
+        <div class= "one">
+            <a href="rx/rx.html"><img src="img/portfolio/rx/rx.jpg"></a>
         </div>
     </div>
     
