--- a/rx/rx.html
+++ b/rx/rx.html
@@ -43,7 +43,7 @@
     </container>
     
     <div id="mail">
-        <a href="about/about.html"><img src="../img/contact.png"></a>
+        <a href="../about/about.html"><img src="../img/contact.png"></a>
     </div>
     
 </div> 
