--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
     </header>
         
     <intro>
-        <a href="about/">I am a student and graphic artist at the University of San Francisco currently studying design and computer science. I specialize in graphic and web design, front-end development, and illustration.</a><br><br>
+        <a href="about">I am a student and graphic artist at the University of San Francisco currently studying design and computer science. I specialize in graphic and web design, front-end development, and illustration.</a><br><br>
     </intro>
         
         <div class= "desc">
             1. <br>
-            <a href="drop/post">Postcards</a>
+            <a href="post">Postcards</a>
         </div>
         <div class= "one">
-            <a href="post/"><img src="img/portfolio/post/post.jpg"></a>
+            <a href="post"><img src="img/portfolio/post/post.jpg"></a>
         </div>
         <div class= "desc">
             2. <br>
