--- a/dropbox.html
+++ b/dropbox.html
@@ -45,7 +45,7 @@
     </container>
     
     <div id="mail">
-        <a href="../about/about.html"><img src="../img/contact.png"></a>
+        <a href="about"><img src="../img/contact.png"></a>
     </div>
     
 </div> 
