--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         </div>
         <div class= "desc">
             2. <br>
-            <a href="drop">Dropbox</a>
+            <a href="dropbox">Dropbox</a>
         </div>
         <div class= "one">
-            <a href="drop"><img src="img/portfolio/drop/dropbox6.jpg"></a>
+            <a href="dropbox"><img src="img/portfolio/drop/dropbox6.jpg"></a>
         </div>
         <div class= "desc">
             3. <br>
