--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         
     <intro>
         <div class="aboutintro">
-        <a href="../">I am a student and graphic artist at the University of San Francisco currently studying design and computer science. I specialize in graphic and web design, front-end development, and illustration.</a><br><br><br>
+        <a href="../">I am a Los Angeles based designer with an affinity for both print and web design, typography, visual identity, illustration, and communicating through abstraction.</a><br><br><br>
         </div>
         
         <div id="experience">
