--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
         
     <intro>
-        <a href="about">I am a student and graphic artist at the University of San Francisco currently studying design and computer science. I specialize in graphic and web design, front-end development, and illustration.</a><br><br>
+        <a href="about">I am a Los Angeles based designer with an affinity for both print and web design, typography, visual identity, illustration, and communicating through abstraction.</a><br><br>
     </intro>
         
         <div class= "desc">
