--- a/pride.html
+++ b/pride.html
@@ -28,7 +28,7 @@
     <div class= "art-grid-container">
         <div class= "about">
             <p>Pride and Vulnerability — 2021</p>
-            An interactive web-based game that consists of three levels exploring the relationship between the pharmaceutical industry, technology, and corporate society.<br><br>
+            Short publication overseeing the juxtapositions of pride and vulnerability throughout works of ancient art from the ancient Mesopotamians to Late Medieval Italy.<br><br>
         </div>   
     </div>
     
