--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
     <div class= "content-body">
     <div class= "grid-container">
     <header>
-        <!--<p>NATALIE MORRIS</p>-->
-        <a href=""><img class="logo" src="img/logo.png" alt="Natalie Morris"></a>
+        <!--<p>NATALIE MORRIS
+        <a href=""><img class="logo" src="img/logo.png" alt="Natalie Morris"></a>/p>-->
+        <a class="header-link" href="">NATALIE MORRIS</a>
     </header>
         
     <intro>
