--- a/about.html
+++ b/about.html
@@ -18,7 +18,9 @@
     <div class= "content-body">
     <div class= "grid-container">
     <header>
-        <a href="../"><img class="logo" src="../img/logo.png" alt="Natalie Morris"></a>
+        <!--<p>NATALIE MORRIS
+        <a href=""><img class="logo" src="img/logo.png" alt="Natalie Morris"></a>/p>-->
+        <a class="header-link" href="../">NATALIE MORRIS</a>
     </header>
         
     <intro>
