--- a/memphis/memphis.html
+++ b/memphis/memphis.html
@@ -16,7 +16,9 @@
 <body>
 <div class= "content-body">
     <header>
-        <a href="../"><img class="logo" src="../img/logo.png" alt="Natalie Morris"></a>
+        <!--<p>NATALIE MORRIS
+        <a href=""><img class="logo" src="img/logo.png" alt="Natalie Morris"></a>/p>-->
+        <a class="header-link" href="../">NATALIE MORRIS</a>
     </header>
     
     <div class= "art-grid-container">
