--- a/index.html
+++ b/index.html
@@ -29,52 +29,59 @@
         
         <div class= "desc">
             1. <br>
+            <a href="emote">Emote</a>
+        </div>
+        <div class= "one">
+            <a href="emote"><img src="img/portfolio/emote/emote1.jpg"></a>
+        </div>
+        <div class= "desc">
+            2. <br>
             <a href="post">Postcards</a>
         </div>
         <div class= "one">
             <a href="post"><img src="img/portfolio/post/post.jpg"></a>
         </div>
         <div class= "desc">
-            2. <br>
+            3. <br>
             <a href="pride">Pride and Vulnerability</a>
         </div>
         <div class= "one">
             <a href="pride"><img src="img/portfolio/pride/pride2.png"></a>
         </div>
         <div class= "desc">
-            3. <br>
+            4. <br>
             <a href="dropbox">Dropbox</a>
         </div>
         <div class= "one">
             <a href="dropbox"><img src="img/portfolio/drop/dropbox6.jpg"></a>
         </div>
         <div class= "desc">
-            4. <br>
+            5. <br>
             <a href="ip">Imprint Lunch</a>
         </div>
         <div class= "one">
             <a href="ip"><img src="img/portfolio/ip/ip1.jpg"></a>
         </div>
         <div class= "desc">
-            5. <br>
+            6. <br>
             <a href="clothing">Clothing Drive</a>
         </div>
         <div class= "one">
             <a href="clothing"><img src="img/portfolio/clothing/clothing1.png"></a>
         </div>
         <div class= "desc">
-            6. <br>
+            7. <br>
             <a href="guised">Guise and Self</a>
         </div>
         <div class= "one">
             <a href="guised"><img src="img/portfolio/guised/guised.jpg"></a>
         </div>
         <div class= "desc">
-            7. <br>
+            8. <br>
             <a href="rx">Rx</a>
         </div>
         <div class= "one">
-            <a href="rx"><img src="img/portfolio/rx/rx.jpg"></a>
+            <a href="rx"><img src="img/portfolio/rx/rx5.jpg"></a>
         </div>
     </div>
     
