--- a/emote.html
+++ b/emote.html
@@ -35,7 +35,7 @@
     <div class= "art-grid-container">
         <div class= "about">
             <p>Emote — 2021</p>
-            Emote is a multimedia design installation exploring the contemporary relationship between healthcare, advertising, and inaccessibility through the perspective of a dystopian future in which mental sanity has become a luxury of the rich.<br>
+            A multimedia design installation exploring the contemporary relationship between healthcare, advertising, and inaccessibility through the perspective of a dystopian future in which mental sanity has become a luxury of the rich.<br>
             <a class="link" href="https://emote.company/experience/">Website</a><br>
             <br>
         </div>   
