--- a/about.html
+++ b/about.html
@@ -38,12 +38,18 @@
             </div>
             
             <c>Experience:</c><br>
+            Imprint Projects — Los Angeles (2021-Present)<br>
+            Designer
+            <br><br>
+            Lemonaid Health — San Francisco (2020)<br>
+            Freelance Illustrator
+            <br><br>
             Imprint Projects — San Francisco (2019)<br>
             Imprint Projects — Los Angeles (2020)
             <br>
             Design Intern<br><br>
             The Graphics Center — San Francisco (2017-2021)<br>
-            Senior Graphic Designer<br><br>
+            Designer<br><br>
 
             <c>Education:</c><br>
             University of San Francisco<br>
