--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
 
     <nav>
         <a href="mailto:natmariemorris@gmail.com">Email</a><br>
-        <a href="https://www.instagram.com/n_______mm">Instagram</a><br>
+        <a href="https://www.instagram.com/nmm.design/">Instagram</a><br>
         <a href="https://www.linkedin.com/in/nataliemariemorris/">LinkedIn</a><br>
     </nav>
     
