--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
             <div id="hiddennav">
                 <c>Contact:</c><br>
                 <a href="mailto:natmariemorris@gmail.com">Email</a><br>
-                <a href="https://www.instagram.com/n_______mm">Instagram</a><br>
+                <a href="https://www.instagram.com/nmm.design">Instagram</a><br>
                 <a href="https://www.linkedin.com/in/nataliemariemorris/">LinkedIn</a><br><br>
             </div>
             
