--- a/about.html
+++ b/about.html
@@ -37,6 +37,14 @@
                 <a href="https://www.linkedin.com/in/nataliemariemorris/">LinkedIn</a><br><br>
             </div>
             
+            <c>Selected Clients:</c><br>
+            Dropbox<br>
+            Google<br>
+            Levi's<br>
+            Patreon<br>
+            Twitter<br>
+            Smashbox Cosmetics<br><br>
+            
             <c>Experience:</c><br>
             Imprint Projects — Los Angeles (2021-Present)<br>
             Designer
